--- a/views/collections.ejs
+++ b/views/collections.ejs
@@ -1,4 +1,4 @@
-<div class="content">
+<div class="content dark-bg">
   <!--section-->
   <section class="hero-section dark-bg" data-scrollax-parent="true">
     <div class="hero-canvas-wrap fs-canvas first-tile_load">
@@ -30,7 +30,7 @@
   </section>
   <!--section end-->
   <!--section  -->
-  <section class="no-padding-bottom" id="sec1">
+  <section class="no-padding-bottom dark-bg" id="sec1">
     <!-- container-->
     <div class="container">
       <!-- det-wrap-->
@@ -39,11 +39,11 @@
           <div class="first-tile_load">
             <!-- tabs-container-->
             <div id="tabs-container" class="fl-wrap">
-              <div class="tabs-counter">
+              <!-- <div class="tabs-counter">
                 <span class="tab-name">Mistaken Fabrics</span>
-                <!-- <div class="tc_item">Mistaken Fabrics</div> -->
-              </div>
-              <ul class="tabs-menu fl-wrap">
+                <div class="tc_item">Mistaken Fabrics</div>
+              </div> -->
+              <!-- <ul class="tabs-menu fl-wrap">
                 <li class="selectedLava">
                   <a href="#tab-1" data-tabnum="Mistaken Fabrics"><span>01.</span>Mistaken Fabrics</a>
                 </li>
@@ -51,7 +51,7 @@
                   <a href="#tab-2" data-tabnum="Munsiko"><span>02.</span>Munsiko</a>
                 </li>
                 
-              </ul>
+              </ul> -->
               <!-- tab-content-->
               <div id="tab-1" class="tab-content">
 
