--- a/views/events.ejs
+++ b/views/events.ejs
@@ -1,4 +1,4 @@
-<div class="content">
+<div class="content dark-bg">
   <!--section-->
   <section class="hero-section dark-bg" data-scrollax-parent="true">
     <div class="hero-canvas-wrap fs-canvas first-tile_load">
@@ -34,7 +34,7 @@
   </section>
   <!--section end-->
   <!--section  -->
-  <section class="no-padding-bottom" id="sec1">
+  <section class="no-padding-bottom dark-bg" id="sec1">
     <!-- container-->
     <div class="container">
       <!-- det-wrap-->
