--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,134 +1,229 @@
-<div class="content full-height hidden-item home-half-slider">
-  <div class="hero-canvas-wrap">
-    <div class="dots gallery__dots" data-dots=""></div>
-  </div>
-  <!-- option-panel-->
-  <div class="option-panel bot-element">
-    <a href="/about" class="start-btn color-bg">
-      Get to know us <i class="fal fa-long-arrow-right"></i></a>
-    <div class="swiper-counter">
-      <div id="current">01</div>
-      <div id="total"></div>
-    </div>
-    <div class="slide-progress-container">
-      <div class="slide-progress-warp">
-        <div class="slide-progress color-bg"></div>
+<div class="content">
+
+  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="https://pbs.twimg.com/media/EGHYvttU4AAYKb7?format=jpg&name=large" width="100%" class="d-block w-100" alt="...">
+        <div class="carousel-caption">
+          One Image
+        </div>
+      </div>
+      <div class="item">
+        <img class="img-responsive" src="http://placehold.it/1200x600/fffccc/000&text=Two" alt="...">
+        <div class="carousel-caption">
+          Another Image
+        </div>
+      </div>
+      <div class="item">
+        <img class="img-responsive" src="http://placehold.it/1200x600/fcf00c/000&text=Three" alt="...">
+        <div class="carousel-caption">
+          Another Image
+        </div>
       </div>
     </div>
+
+    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+    </a>
+    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+    </a>
   </div>
-  <!--option-panel end -->
-  <!-- hero-slider-wrap -->
-  <div class="hero-slider-wrap fl-wrap full-height">
-    <div class="hero-slider fs-gallery-wrap fl-wrap full-height">
-      <div class="swiper-container">
-        <div class="swiper-wrapper">
-          <!-- swiper-slide-->
-          <div class="swiper-slide">
-            <div class="half-hero-wrap">
-              <!-- <div class="pr-bg">not really</div> -->
-              <div class="rotate_text">CREATE.INSPIRE.SHARE</div>
-              <h1>
-                IGC
-                <span>
-                  <br />
-                  FASHION</span>
-              </h1>
-              <h4></h4>
-              <div class="clearfix"></div>
+
+  <h3>Collections</h3>
+
+
+  <div id="tabs-container" class="fl-wrap">
+    <!-- <div class="tabs-counter">
+                    <span class="tab-name">Mistaken Fabrics</span>
+                    <div class="tc_item">Mistaken Fabrics</div>
+                  </div> -->
+
+    <!-- <div class="tabs-counter">
+                <span>0</span>
+                <div class="tc_item">1</div>
+              </div> -->
+    <!-- <ul class="tabs-menu fl-wrap">
+                <li class="selectedLava">
+                  <a href="#tab-1" data-tabnum="1"><span>01.</span>Munsiko</a>
+                </li>
+              
+              </ul> -->
+    <!-- tab-content-->
+    <div id="tab-1" class="tab-content">
+      <!-- <h3 class="pr-subtitle">SHOW CASE</h3> -->
+      <!-- portfolio start -->
+      <div class="gallery-items
+                      min-pad
+                      lightgallery
+                     two-column
+                      fl-wrap
+                    ">
+        <!-- gallery-item-->
+        <div class="gallery-item" style="height: 367.431px;">
+          <div class="grid-item-holder">
+            <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+              class="
+                                                              fet_pr-carousel-box-media-zoom
+                                                              popup-image
+                                                            "><i class="fal fa-search"></i></a>
+            <img
+              src="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+              alt="" />
+          </div>
+        </div>
+        <!-- gallery-item end-->
+        <!-- gallery-item-->
+        <div class="gallery-item" style="height: 367.431px;">
+          <div class="grid-item-holder">
+            <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+              class="
+                                                            fet_pr-carousel-box-media-zoom
+                                                            popup-image
+                                                          "><i class="fal fa-search"></i></a>
+            <img
+              src="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+              alt="" />
+          </div>
+        </div>
+        <!-- gallery-item end-->
+
+        <!-- portfolio end -->
+        <!-- <h3 class="pr-subtitle mar-top">thi is</h3> -->
+        <p></p>
+      </div>
+      <!-- tab-content end-->
+    </div>
+
+
+
+
+  </div>
+
+  <h3>Collections</h3>
+
+
+  <div class="
+                        gallery-items
+                        min-pad
+                        lightgallery
+                       four-column
+                        fl-wrap
+                      ">
+    <!-- gallery-item-->
+    <div class="gallery-item " style="padding: 5px">
+      <div class="grid-item-holder">
+        <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+          class="
+                                                                    fet_pr-carousel-box-media-zoom
+                                                                    popup-image
+                                                                  "><i class="fal fa-search"></i></a>
+        <img
+          src="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+          alt="" />
+      </div>
+    </div>
+    <!-- gallery-item end-->
+    <!-- gallery-item-->
+    <div class="gallery-item" style="padding: 5px">
+      <div class="grid-item-holder">
+        <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+          class="
+                                                                    fet_pr-carousel-box-media-zoom
+                                                                    popup-image
+                                                                  "><i class="fal fa-search"></i></a>
+        <img
+          src="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+          alt="" />
+      </div>
+    </div>
+    <!-- gallery-item end-->
+    <!-- gallery-item-->
+    <div class="gallery-item" style="padding: 5px">
+      <div class="grid-item-holder">
+        <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+          class="
+                                                                  fet_pr-carousel-box-media-zoom
+                                                                  popup-image
+                                                                "><i class="fal fa-search"></i></a>
+        <img
+          src="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+          alt="" />
+      </div>
+    </div>
+    <div class="gallery-item">
+      <div class="grid-item-holder">
+        <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+          class="
+                                                                    fet_pr-carousel-box-media-zoom
+                                                                    popup-image
+                                                                  "><i class="fal fa-search"></i></a>
+        <img
+          src="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+          alt="" />
+      </div>
+    </div>
+
+    
+  </div>
+
+  <div class="container">
+    <div class="fl-wrap footer-inner">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="footer-logo">
+            <img src="images/igc-fashion-logo.png" alt="">
+          </div>
+          <div class="footer_text  footer-box fl-wrap">
+            <p>IGC is a fashion and costume label from kampala uganda inspired by African heritage, nature and culture
+              always paired with a forward thinking and a unique design aesthetic.</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="footer-header fl-wrap"><span>01.</span> Contacts</div>
+          <!-- footer-contacts-->
+          <div class="footer-contacts footer-box fl-wrap">
+            <ul>
+              <li><span>Call:</span><a href="tel: +(256)770693987">+(256)750889338
+  
+                </a></li>
+              <li><span>Write :</span><a href="mailto: info@igcfashion.co"> info@igcfashion.co</a></li>
+              <li><span>Find us : </span><a href="https://goo.gl/maps/Ku9ogvBxwpLqPCJTA"> Kisaasi, Kampala, Uganda </a>
+              </li>
+            </ul>
+          </div>
+          <!-- footer contacts end -->
+          <a href="mailto:info@igcfashion.co" class="fc_button">Get In Touch <i class="fal fa-envelope"></i></a>
+        </div>
+        <div class="col-md-4">
+          <div class="footer-header fl-wrap"><span>02.</span> Subscribe</div>
+          <div class="footer-box fl-wrap">
+            <p>Want to be notified with our recent and on-going projects. Just sign up and we'll send you a notification
+              by email.</p>
+            <div class="subcribe-form fl-wrap">
+              <form id="subscribe" class="fl-wrap">
+                <input class="enteremail" name="email" id="subscribe-email" placeholder="Your Email" spellcheck="false"
+                  type="text">
+                <button type="submit" id="subscribe-button" class="subscribe-button"> Send <i
+                    class="fal fa-long-arrow-right"></i></button>
+                <label for="subscribe-email" class="subscribe-message"></label>
+              </form>
             </div>
           </div>
-          <!-- swiper-slide end-->
-          <!-- swiper-slide-->
-          <div class="swiper-slide">
-            <div class="half-hero-wrap">
-              <div class="rotate_text">CREATE.INSPIRE.SHARE</div>
-              <h1>Fashion<br /><span>Cypher</span></h1>
-              <h4></h4>
-              <div class="clearfix"></div>
-              <!-- <a href="portfolio-single4.html" class="half-hero-wrap_link">View Project <i class="fal fa-long-arrow-right"></i></a>-->
-            </div>
-          </div>
-          <!-- swiper-slide end-->
-          <!-- swiper-slide-->
-          <div class="swiper-slide">
-            <div class="half-hero-wrap">
-              <div class="rotate_text">CREATE.INSPIRE.SHARE</div>
-              <h1>Kwetu<br /><span>Kwanza</span></h1>
-              <h4></h4>
-              <div class="clearfix"></div>
-              <!--  <a href="portfolio-single2.html" class="half-hero-wrap_link">View Project <i class="fal fa-long-arrow-right"></i></a>-->
-            </div>
-          </div>
-          <!-- swiper-slide end-->
-          <!-- swiper-slide-->
-          <div class="swiper-slide">
-            <div class="half-hero-wrap">
-              <div class="rotate_text">CREATE.INSPIRE.SHARE</div>
-              <h1>
-                <span>Munsiko<br /></span> 
-                collections
-              </h1>
-              <!-- <h1>
-                <span>New<br /></span>
-                collections
-              </h1> -->
-
-              <!-- <a href="portfolio-single2.html" class="half-hero-wrap_link">View shop <i class="fal fa-long-arrow-right"></i></a>-->
-            </div>
-          </div>
-          <!-- swiper-slide end-->
-          <!-- swiper-slide-->
         </div>
       </div>
     </div>
-    <div class="hero-slider_control-wrap bot-element">
-      <div class="hero-slider_control hero-slider-button-next">
-        <span>Next<i class="fal fa-angle-right"></i></span>
+    <div class="subfooter fl-wrap">
+      <!-- policy-box-->
+      <div class="policy-box">
+        <span>&#169; IGC FASHION 2021 / All rights reserved. </span>
       </div>
-      <div class="hero-slider_control hero-slider-button-prev">
-        <span><i class="fal fa-angle-left"></i>Prev </span>
-      </div>
+      <!-- policy-box end-->
+      <a href="#" class="to-top-btn to-top">Back to top <i class="fal fa-long-arrow-up"></i></a>
     </div>
-    <div class="hero-slider-wrap_pagination hlaf-slider-pag"></div>
+      <div class="footer-canvas">
+        <div class="dots gallery__dots" data-dots=""></div>
+      </div>
   </div>
-  <!-- hero-slider-wrap  end-->
-  <!-- hero-slider-img-->
-  <div class="hero-slider-img hero-slider-wrap_halftwo">
-    <div class="swiper-container">
-      <div class="swiper-wrapper">
-        <!-- swiper-slide-->
-        <div class="swiper-slide">
-          <!-- <div>
-          <div class="bg" data-bg="pics/DSC00440.jpg"></div>
 
-          </div> -->
-          <!-- <img src="pics/DSC00440" alt=""> -->
-          <div class="bg" data-bg="images/bg/widescope-slide-4.jpg"></div>
-        </div>
-        <!-- swiper-slide end-->
-        <!-- swiper-slide-->
-        <div class="swiper-slide">
-          <div class="bg" data-bg="images/bg/widescope-slide-5.jpg"></div>
-        </div>
-        <!-- swiper-slide end-->
-        <!-- swiper-slide-->
-        <div class="swiper-slide">
-          <div class="bg" data-bg="images/bg/widescope-slide-6.jpg"></div>
-        </div>
-        <!-- swiper-slide end-->
-        <!-- swiper-slide-->
-        <div class="swiper-slide">
-          <div class="bg" data-bg="images/bg/bg.jpg"></div>
-        </div>
-        <!-- swiper-slide end-->
-        <!-- swiper-slide-->
-
-        <!-- swiper-slide end-->
-        <!-- swiper-slide-->
-
-        <!-- swiper-slide end-->
-      </div>
-    </div>
-  </div>
-  <!-- hero-slider-img  end-->
-</div>
