--- a/views/membership.ejs
+++ b/views/membership.ejs
@@ -1,30 +1,69 @@
 <div class="content">
-    <!--section-->
-    <!--section end-->
-    <div class="content">
-      <!--fixed-column-wrap-->
-      <div class="fixed-column-wrap">
-        <div class="pr-bg"></div>
-        <!--fixed-column-wrap-content-->
-        <div class="fixed-column-wrap-content" style="background-color: white;">
-          <div>Donate</div>
+  <!--section-->
+  <!--section end-->
+  <div class="content">
+    <!--fixed-column-wrap-->
+    <div class="fixed-column-wrap">
+      <div class="pr-bg"></div>
+      <!--fixed-column-wrap-content-->
+      <div class="fixed-column-wrap-content " >
+        <!-- <div>Donate</div> -->
+        <section class="pricing-section ">
+        <div class="container">
+          <div class="sec-title text-center">
+            <!-- <span class="title">Donate</span> -->
+            <!-- <h2>Membership Plan</h2> -->
+          </div>
+          <div class="outer-box ">
+            <div class="row">
+              <!-- Pricing Block -->
+              <div class="pricing-block
+                              col-lg-4 col-md-6 col-sm-12
+                              wow
+                              fadeInUp
+                              
+                            ">
+                <div class="inner-box ">
+                  <!-- <div class="icon-box">
+                    <div class="icon-outer">
+                      <i class="fas fa-paper-plane"></i>
+                    </div>
+                  </div> -->
+                  <div class="price-box ">
+                    <!-- <div class="title">IGC</div> -->
+                    <h4 class="price">DONATE</h4>
+                  </div>
+                  
+                  <%-include(card) %>
+
+               
+                 
+                 
+                </div>
+              </div>
+      
+      
+            </div>
+          </div>
         </div>
-        <!--fixed-column-wrap-content end-->
+      </section>
       </div>
-      <!--fixed-column-wrap end-->
-      <!--column-wrap-->
-      <div class="column-wrap">
-        <!--column-wrap-container -->
-        <div class="column-wrap-container fl-wrap">
-          <div class="col-wc_dec">
-            <div class="pr-bg pr-bg-white"></div>
-          </div>
-          <div class="col-wc_dec col-wc_dec2">
-            <div class="pr-bg pr-bg-white"></div>
-          </div>
-          <div class="container">
+      <!--fixed-column-wrap-content end-->
+    </div>
+    <!--fixed-column-wrap end-->
+    <!--column-wrap-->
+    <div class="column-wrap ">
+      <!--column-wrap-container -->
+      <div class="column-wrap-container fl-wrap">
+        <!-- <div class="col-wc_dec">
+          <div class="pr-bg pr-bg-white"></div>
+        </div>
+        <div class="col-wc_dec col-wc_dec2">
+          <div class="pr-bg pr-bg-white"></div>
+        </div> -->
+        <div class="container">
           <div class="col-md-12">
-            <h1 style="color:blackred;font-size:25px;">IGC Cypher Membership</h1>
+            <h1 style="color:#f76905;font-size:25px;">IGC Cypher Membership</h1>
             <p>
               IGC Fashion is a Community based Fashion Label in Uganda,
               which is following the philosophy of Inspiring, creating
@@ -50,9 +89,9 @@
               day. Be part of IGCommunity #iamigc
             </p>
           </div>
-          <section class="col-md-12">
+          <section class="col-md-12 ">
             <div class="col-md-6">
-              <h1 style="color:blackred;font-size:25px;">Support an intern</h1>
+              <h1 style="color:#f76905;font-size:25px;">Support an intern</h1>
               <p>
                 IGC Fashion supports the young adults to improve on
                 their skills and develop them. Therefore the Fashion
@@ -64,7 +103,7 @@
             </div>
 
             <div class="col-md-6">
-              <h1 style="color:blackred;font-size:25px;">IGC School Membership</h1>
+              <h1 style="color:#f76905;font-size:25px;">IGC School Membership</h1>
               <p>
                 IGC’s biggest goal is to build their own art school,
                 where people can learn different skills in Art. Uganda
@@ -75,197 +114,22 @@
                 school
               </p>
             </div>
-            </div>
-          </section>
-          <div class="section-separator"></div>
-
-          <div class="section-separator"></div>
-          <!--section-->
-
-          <!--section end-->
         </div>
-        <!--column-wrap-container end-->
+        </section>
+        <!-- <div class="section-separator"></div>
+
+        <div class="section-separator"></div> -->
+        <!--section-->
+
+        <!--section end-->
       </div>
-      <!--column-wrap end-->
-      <div class="limit-box fl-wrap"></div>
+      <!--column-wrap-container end-->
     </div>
-    <!--section  -->
-    <section class="no-padding-bottom" id="sec1">
-      <!-- container-->
-      <div class="container">
-        <!-- det-wrap-->
-        <div class="fl-wrap det-wrap">
-          <div class="row">
-            <section class="pricing-section">
-              <div class="container">
-                <div class="sec-title text-center">
-                  <span class="title">Get plan</span>
-                  <h2>Membership Plan</h2>
-                </div>
-                <div class="outer-box">
-                  <div class="row">
-                    <!-- Pricing Block -->
-                    <div
-                      class="
-                        pricing-block
-                        col-lg-4 col-md-6 col-sm-12
-                        wow
-                        fadeInUp
-                      "
-                    >
-                      <div class="inner-box">
-                        <div class="icon-box">
-                          <div class="icon-outer">
-                            <i class="fas fa-paper-plane"></i>
-                          </div>
-                        </div>
-                        <div class="price-box">
-                          <div class="title">IGC Cypher</div>
-                          <h4 class="price">$15 monthly</h4>
-                        </div>
-                        <ul class="features">
-                          <li class="true">Donate monthly</li>
-                          <li class="true">
-                            Get 5% of all IGC Clothes
-                          </li>
-                          <li class="true">
-                            Newsletter 4 times a year
-                          </li>
-                          <li class="false">Catalogue</li>
-                        </ul>
-                        <div class="btn-box">
-                          <a href="#" class="theme-btn">Register</a>
-                        </div>
-                      </div>
-                    </div>
-
-                    <!-- Pricing Block -->
-                    <div
-                      class="
-                        pricing-block
-                        col-lg-4 col-md-6 col-sm-12
-                        wow
-                        fadeInUp
-                      "
-                      data-wow-delay="400ms"
-                    >
-                      <div class="inner-box">
-                        <div class="icon-box">
-                          <div class="icon-outer">
-                            <i class="fas fa-gem"></i>
-                          </div>
-                        </div>
-                        <div class="price-box">
-                          <div class="title">Support an intern</div>
-                          <h4 class="price">$35 monthly</h4>
-                        </div>
-                        <ul class="features">
-                          <li class="true">Monthly donation</li>
-                          <li class="true">
-                            10% discount of all igc clothes
-                          </li>
-                          <li class="true">
-                            4 individual reports of your intern a year
-                          </li>
-                          <li class="true">Newsletter</li>
-                          <li class="false">Catalogue</li>
-                          <li class="false">
-                            0% of Lubugo Tour Travels
-                          </li>
-                        </ul>
-                        <div class="btn-box">
-                          <a href="#" class="theme-btn">Register</a>
-                        </div>
-                      </div>
-                    </div>
-
-                    <!-- Pricing Block -->
-                    <div
-                      class="
-                        pricing-block
-                        col-lg-4 col-md-6 col-sm-12
-                        wow
-                        fadeInUp
-                      "
-                      data-wow-delay="800ms"
-                    >
-                      <div class="inner-box">
-                        <div class="icon-box">
-                          <div class="icon-outer">
-                            <i class="fas fa-rocket"></i>
-                          </div>
-                        </div>
-                        <div class="price-box">
-                          <div class="title">IGC School Membership</div>
-                          <h4 class="price">$45 monthly</h4>
-                        </div>
-                        <ul class="features">
-                          <li class="true">Monthly donation</li>
-                          <li class="true">15% of IGC clothes</li>
-                          <li class="true">
-                            Newsletter and latest plans of the school
-                            development
-                          </li>
-                          <li class="true">Catalogue</li>
-                          <li class="true">
-                            10% of Lubugo Tours Travels
-                          </li>
-                        </ul>
-                        <div class="btn-box">
-                          <a href="#" class="theme-btn">Register</a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </section>
-            <div class="col-md-8 first-tile_load">
-              <!-- tabs-container-->
-
-              <!-- tabs-container end-->
-              <div class="clearfix"></div>
-              <span class="dec-border fl-wrap"></span>
-
-              <div class="pr-bg pr-bg-white"></div>
-            </div>
-          </div>
-        </div>
-        <!-- det-wrap end-->
-      </div>
-      <!-- container end -->
-      <div class="clearfix"></div>
-      <div class="limit-box fl-wrap"></div>
-      <div class="content-nav_holder fl-wrap first-tile_load">
-        <div class="container">
-          <div class="content-nav">
-            <ul>
-              <li>
-                <a href="portfolio-single13.html"
-                  ><i class="fal fa-long-arrow-left"></i><span></span
-                ></a>
-                <div class="content-nav_mediatooltip cnmd_leftside">
-                  <img src="images/bg/hoima-airport-1.jpg" alt="" />
-                </div>
-              </li>
-              <li>
-                <a href="portfolio.html" class="list-folio_nav">
-                  <span></span>
-                </a>
-              </li>
-              <li>
-                <a href="portfolio-single12.html"
-                  ><span></span> <i class="fal fa-long-arrow-right"></i
-                ></a>
-                <div class="content-nav_mediatooltip cnmd_rightside">
-                  <img src="images/bg/nsa-1.jpg" alt="" />
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
+    <!--column-wrap end-->
+    <div class="limit-box fl-wrap"></div>
   </div>
-  <!--content end -->
-  <!-- footer -->
+  <!--section  -->
+
+</div>
+<!--content end -->
+<!-- footer -->
